NISP-1915 Fixed issue so emai lfield is visible if javascript is disabled.

--- a/app/uk/gov/hmrc/nisp/assets/sass/nisp.scss
+++ b/app/uk/gov/hmrc/nisp/assets/sass/nisp.scss
@@ -344,8 +344,6 @@ fieldset {
 }
 
 .email {
-
-  display: none;
   padding-left: 0.78em;  
 }
 
